--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="description" content="Interact with Twitch events and chat via Browser-Source-ready dynamic pages or chatbot."/>
+  <meta name="keywords" content="twitch,bot,alerts,browser source,obs,twitch alerts,hype train,chatbot,pokemon,custom,custom commands, commands,pokémon,redemptions,redemptions,reward,rewards,channel points,follow,subscription,follows,subscriptions"/>
   <title>cCarbn</title>
+  <meta property="og:title" content="cCarbn" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Interact with Twitch events and chat via Browser-Source-ready dynamic pages or chatbot." />
+  <meta property="og:url" content="https://ccarbn.io" />
+  <meta property="og:image" content="https://ccarbn.io/assets/brand/logo.png" />
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
