--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Interact with Twitch events and chat via Browser-Source-ready dynamic pages or chatbot."/>
+  <meta name="description" content="Interact with Twitch events and chat via Browser Source ready dynamic pages and chat."/>
   <meta name="keywords" content="twitch,bot,alerts,browser source,obs,twitch alerts,hype train,chatbot,pokemon,custom,custom commands, commands,pokémon,redemptions,redemptions,reward,rewards,channel points,follow,subscription,follows,subscriptions"/>
   <title>cCarbn</title>
-  <meta property="og:title" content="cCarbn" />
+  <meta property="og:title" content="cCarbn - A Twitch All-in-one bot" />
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Interact with Twitch events and chat via Browser-Source-ready dynamic pages or chatbot." />
+  <meta property="og:description" content="Interact with Twitch events and chat via Browser Source ready dynamic pages and chat." />
   <meta property="og:url" content="https://ccarbn.io" />
   <meta property="og:image" content="https://ccarbn.io/assets/brand/logo.png" />
   <base href="/">
